hero section mobile max-height fixed

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -115,6 +115,9 @@
 }
 
 @media screen and (max-width: 500px) {
+  .section {
+    max-height: 730px;
+  }
   .text__container {
     max-width: 318px;
     margin: 0 auto;
